<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/start_btn"
        android:layout_width="252dp"
        android:layout_height="49dp"
        android:layout_marginTop="141dp"
        android:layout_marginBottom="164dp"
        android:background="@drawable/btn_gradient"
        android:backgroundTint="@null"
        android:text="@string/start_btn"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitle" />

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/abhaya_libre_extrabold"
        android:gravity="center"
        android:text="@string/title_text"
        android:textColor="#7B1FA2"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/start_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.627" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="299dp"
        android:layout_height="45dp"
        android:fontFamily="@font/abhaya_libre_semibold"
        android:gravity="center"
        android:text="@string/subtitle"
        android:textColor="#757575"
        android:textSize="19dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.589"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.532" />

    <TextView
        android:id="@+id/emoji"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:text="@string/emoji"
        android:textSize="50dp"
        app:layout_constraintBottom_toTopOf="@+id/title_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.852" />

</androidx.constraintlayout.widget.ConstraintLayout>