<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".ResultActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="380dp"
        android:layout_height="626dp"
        app:cardBackgroundColor="@color/cardview_col"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.152">

        <TextView
            android:id="@+id/category"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="0dp"
            android:fontFamily="@font/abhaya_libre_bold"
            android:gravity="center"
            android:text="@string/category"
            android:textColor="@color/text"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/Result"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.303" />

        <androidx.cardview.widget.CardView
            android:layout_width="360dp"
            android:layout_height="420dp"
            android:layout_marginLeft="9dp"
            android:layout_marginTop="200dp"
            app:cardBackgroundColor="#FFFFFF"
            app:cardCornerRadius="16dp"
            app:cardElevation="6dp">

            <LinearLayout
                android:layout_width="368dp"
                android:layout_height="415dp"
                android:orientation="vertical"
                android:padding="20dp">


                <TextView
                    android:id="@+id/Result"
                    android:layout_width="293dp"
                    android:layout_height="51dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:text="@string/Result"
                    android:textColor="@color/text"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.353" />

                <TextView
                    android:id="@+id/label"
                    android:layout_width="292dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:fontFamily="@font/abhaya_libre_bold"
                    android:gravity="center"
                    android:text=""
                    android:textColor="@color/text"
                    android:textSize="20sp"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.501"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/Result"
                    app:layout_constraintVertical_bias="0.0" />


                <TextView
                    android:id="@+id/meaning"
                    android:layout_width="326dp"
                    android:layout_height="258dp"
                    android:fontFamily="@font/abhaya_libre_bold"
                    android:gravity="center"
                    android:text=""
                    android:textColor="@color/text"
                    android:textSize="20sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="80dp"
            app:srcCompat="@drawable/whatsapp_image_2026_04_18_at_7_53_48_pm" />

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/history_btn"
        android:layout_width="279dp"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:text="@string/history_btn"
        android:background="@drawable/btn_gradient"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>